tests/expectations/compiler/option/unsupported_optional_fail.out
Error [ETYC0372160]: The type `(u8, u8)` cannot be wrapped in an optional.
    --> compiler-test:4:9
     |
   4 |         let a: (u8, u8)? = (1u8, 2u8); // ERROR: Tuples cannot be optional just yet
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Optionals cannot wrap signatures, finals, mappings, tuples, vectors, records, arrays whose elements are optional-unsafe, or structures containing any such types.
Error [ETYC0372117]: Expected (u8, u8)? but type `(u8, u8)` was found.
    --> compiler-test:4:28
     |
   4 |         let a: (u8, u8)? = (1u8, 2u8); // ERROR: Tuples cannot be optional just yet
     |                            ^^^^^^^^^^
Error [ETYC0372160]: The type `Final<Fn()>` cannot be wrapped in an optional.
    --> compiler-test:14:9
     |
  14 |         let fut: Final? = final { finalize(); }; // ERROR: Final? is not allowed
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Optionals cannot wrap signatures, finals, mappings, tuples, vectors, records, arrays whose elements are optional-unsafe, or structures containing any such types.
